bundles/pcre/Makeile: fix comment
The introductory comment was saying that the Makefile was for the extlib
bundle, which is obviously wrong.

--- a/bundles/pcre/Makefile
+++ b/bundles/pcre/Makefile
@@ -1,5 +1,5 @@
 # This Makefile serves as a wrapper to bundle the
-# extlib module without modifications.
+# pcre module without modifications.
 
 ifneq ($(MAKECMDGOALS),distclean)
 include ../../Makefile.config
