docs/manual/Makefile: improve the way hevea is called.
Hevea needs a file as an argument to the -exec option.
This file can be located in different directories.
The Makeile was looking for it in the recipe that produces the HTML and
this made Hevea'sinvocation quite complex.
It was thus hidden, which was not convenient at all.

This commit fixes this. Determining the file's path is now done in a
shell script whose result is put into a makevariable.

The commands used to invoke Hevea thus become simpler and can
hence be shown to the user.

--- a/docs/manual/Makefile
+++ b/docs/manual/Makefile
@@ -5,6 +5,9 @@
 ifneq ($(MAKECMDGOALS),distclean)
 include ../../Makefile.config
 endif
+HEVEA = hevea
+HEVEA_XXDATE := $(shell ./find-xxdate)
+HEVEA_CMD := $(HEVEA) -exec $(HEVEA_XXDATE)
 
 MAINSRC=main.tex
 SRC=$(wildcard *.tex)
@@ -81,24 +84,8 @@ check: $(HTML)
 	checklink $<
 
 .tex.html:
-# For Gentoo: /usr/lib64/hevea
-# For Ubuntu family: /usr/share/hevea
-# For default installation
-	@if [ -f /usr/lib64/hevea/xxdate.exe ]; then \
-	hevea -exec /usr/lib64/hevea/xxdate.exe  $< ; \
-	hevea -exec /usr/lib64/hevea/xxdate.exe  $< ; \
-	elif [ -f /usr/share/hevea/xxdate.exe ]; then \
-	hevea -exec /usr/share/hevea/xxdate.exe $< ; \
-	hevea -exec /usr/share/hevea/xxdate.exe $< ; \
-	elif [ -f /usr/local/lib/hevea/xxdate.exe ]; then \
-	hevea -exec /usr/local/lib/hevea/xxdate.exe $< ; \
-	hevea -exec /usr/local/lib/hevea/xxdate.exe $< ; \
-	elif [ -f /opt/local/share/hevea/xxdate.exe ]; then \
-	hevea -exec /opt/local/share/hevea/xxdate.exe $< ; \
-	hevea -exec /opt/local/share/hevea/xxdate.exe $< ; \
-	else \
-	echo -e "\n\n *** Hevea: Unable to find xxdate.exe ***\n\n"; \
-	fi
+	$(HEVEA_CMD) $<
+	$(HEVEA_CMD) $<
 	hacha -o index.html main_grammar.html
 
 ##############################################################################
