Drop support of OCaml 3.11.
There is a bug in OCaml 3.12.2 that prevents to produce a native cde
version of coccinelle. Hence drop support or OCaml3.11 completely
so that a native-code version of Coccinelle can be produced for all
supported versions of OCaml.

--- a/configure.ac
+++ b/configure.ac
@@ -81,7 +81,8 @@ AC_SUBST([PKG_CONFIG],["$COCCI_SRCDIR/setup/fake-subst.sh $PKG_CONFIG_ORIG"])
 
 dnl  ocaml compiler configuration
 AC_PROG_OCAML
-AC_CHECK_OCAMLVERSION([OCAMLATLEAST311],[3.11])
+AC_CHECK_OCAMLVERSION([OCAMLATLEAST312],[3.12])
+AS_IF([test "x$OCAMLATLEAST312" = xno],[AC_MSG_ERROR([OCaml >= 3.12 is required to compile Coccinelle])])
 AC_CHECK_OCAMLVERSION([OCAMLATLEAST4020],[4.02])
 AC_SUBST([OCAMLCORIG],["$OCAMLC"])
 
@@ -89,7 +90,6 @@ AS_IF([test "x$OCAMLC" = xno -o "x$OCAMLDEP" = xno -o "x$OCAMLDOC" = xno -o "x$O
 [dnl
   AC_MSG_ERROR([It seems a few components of the OCaml distribution could nt be found. Make sure the following tools are installed and in your path: ocamlc, ocamldep, ocamldoc, ocamlmklib.])
 ])
-AS_IF([test "x$OCAMLATLEAST311" = xno],[AC_MSG_NOTICE([a more recent OCaml installation may be required])])
 
 dnl  ocaml tools
 AC_PROG_CAMLP4
