Build system: run ./autogen when appropriate during the release process.

--- a/Makefile.release
+++ b/Makefile.release
@@ -105,6 +105,7 @@ prerelease:
 fix-expected:
 	@echo "going to generate: tests/SCORE_expected_orig.sexp"
 	$(MAKE) distclean
+	./autogen
 	./configure --enable-release --disable-python $(extra_configure_flags)
 	$(MAKE) opt-only
 	yes | ./spatch.opt -testall --iso-file ./standard.iso --macro-file-builtins ./standard.h
@@ -131,6 +132,7 @@ package:
 	@echo "\tThe coccinelle SVN repository must be in $(WEBBASE)\n"
 
 package-src:
+	if [ ! -f ./configure ]; then ./autogen; fi
 	./configure --enable-release --disable-python --disable-pcre-syntax $(extra_configure_flags)
 	$(MAKE) srctar
 	$(MAKE) coccicheck
@@ -140,6 +142,7 @@ package-src:
 # on those libraries.
 package-nopython:
 	$(MAKE) distclean
+	./autogen
 	./configure --enable-release --disable-python --disable-pcre-syntax --disable-menhirLib --disable-pycaml  $(extra_configure_flags)
 	$(MAKE) bintar
 	$(MAKE) bytecodetar
@@ -149,6 +152,7 @@ package-nopython:
 # on those libraries.
 package-python:
 	$(MAKE) distclean
+	./autogen
 	./configure --enable-release --enable-python --disable-pcre-syntax --disable-menhirLib --disable-pycaml $(extra_configure_flags)
 	$(MAKE) bintar-python
 	$(MAKE) bytecodetar-python
