--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Uploaders: Євгеній Мещеряков <eugen@debian.org>
 Build-Depends:
  debhelper (>= 7.0.50~),
  dh-ocaml,
- dh_python2,
+ dh-python,
  pkg-config (>= 0.9.0),
  ocaml-nox (>= 3.11.0),
  ocaml-best-compilers,
