--- a/debian/rules
+++ b/debian/rules
@@ -21,7 +21,7 @@ MAKE_TGT = all
 endif
 
 build clean binary binary-arch binary-indep install:
-	dh --with ocaml $@
+	dh --with ocaml,python2 $@
 
 
 override_dh_auto_configure:
