Flag_cocci: move headers handling code to the Inclues module.

--- a/parsing_c/Makefile
+++ b/parsing_c/Makefile
@@ -9,6 +9,7 @@ TARGET=parsing_c
 
 # - type_cocci.ml ast_cocci.ml  # + unparse_hrule
 SRC= token_annot.ml flag_parsing_c.ml parsing_stat.ml \
+ includes.ml \
  token_c.ml ast_c.ml control_flow_c.ml \
  visitor_c.ml lib_parsing_c.ml \
  control_flow_c_build.ml \
