--- a/tools/sgen/examples/disj.config
+++ b/tools/sgen/examples/disj.config
@@ -6,4 +6,4 @@ limitations = This is a limitation.|This is another limitation.
 comments = This is to test disjunction generation.
 disj =
   org: "Org message. Found a match in disj rule."
-  report: "Report message. Remove call to this(%s) and replace with call to that(%s)." % (E1,E2)
+  report: "Report message. Remove call to this(%s) and replace with call to that(%s)" % (E1,E2)
