--- a/tools/spgen/scripts/spgen.sh.in
+++ b/tools/spgen/scripts/spgen.sh.in
@@ -4,7 +4,7 @@
 # The Coccinelle source code can be obtained at http://coccinelle.lip6.fr
 
 PREFIX=replace_me
-TARGET=sgen
-SHAREDIR=""${PREFIX}/lib/coccinelle/sgen""
+TARGET=spgen
+SHAREDIR=""${PREFIX}/lib/coccinelle/spgen""
 
 exec ""${SHAREDIR}/${TARGET}"" "$@"
