tools/spgen/source/Makefile: clean and distclean should be declared PHONY.

--- a/tools/spgen/source/Makefile
+++ b/tools/spgen/source/Makefile
@@ -68,6 +68,8 @@ all.opt: $(TARGET)
 $(TARGET): $(CONFIG) $(LIBS) $(GENERATED) $(FULL_SRC)
 	$(OCAMLC_CMD) -custom -o $(TARGET) $(SYSLIBS) $(LIBS) $(GENERATED) $(FULL_SRC)
 
+.PHONY: clean distclean
+
 clean:
 	rm -f *.cm[ioxa] *.o *.a *.cmxa *.annot
 	rm -f *~ .*~ gmon.out #*#
