configure.ac: tell user to use make rather than make all to compile.

--- a/configure.ac
+++ b/configure.ac
@@ -548,7 +548,7 @@ configuration changes, you may need to run first:
   \$ make clean
 
 To compile coccinelle, run:
-  \$ make all
+  \$ make
 
 To install coccinelle, run:
   \$ make install
