tools/distributed: by default make should compile everything.

--- a/tools/distributed/Makefile
+++ b/tools/distributed/Makefile
@@ -1,3 +1,5 @@
+all: spatch_linux cleanup
+
 spatch_linux: spatch_linux.c
 	gcc -Wall -D HOME="\"${COCCINELLE_HOME}/tools/distributed/\"" -o spatch_linux spatch_linux.c
 
