--- a/parsing_c/Makefile
+++ b/parsing_c/Makefile
@@ -39,7 +39,7 @@ SRC= token_annot.ml flag_parsing_c.ml parsing_stat.ml \
 LIBS=../commons/commons.cma ../globals/globals.cma \
      ../parsing_cocci/cocci_parser.cma
 
-INCLUDESDEP= -I ../commons -I ../commons/ocamlextra -I ../commons/ocollection \
+INCLUDESDEP= -I ../commons -I ../commons/ocamlextra \
   -I ../globals -I  ../parsing_cocci
 
 INCLUDES=$(INCLUDESDEP) $(TARZANINCLUDE)
