--- a/Makefile.release
+++ b/Makefile.release
@@ -107,7 +107,7 @@ fix-expected:
 	@echo "going to generate: tests/SCORE_expected_orig.sexp"
 	$(MAKE) distclean
 	./autogen
-	./configure --enable-release --disable-python $(extra_configure_flags)
+	./configure --disable-python $(extra_configure_flags)
 	$(MAKE) opt-only
 	yes | ./spatch.opt -testall --iso-file ./standard.iso --macro-file-builtins ./standard.h
 	cp tests/SCORE_actual.sexp tests/SCORE_expected_orig.sexp
@@ -132,7 +132,7 @@ package:
 
 package-src:
 	if [ ! -f ./configure ]; then ./autogen; fi
-	./configure --enable-release --disable-python --disable-pcre-syntax $(extra_configure_flags)
+	./configure --disable-python --disable-pcre-syntax $(extra_configure_flags)
 	$(MAKE) srctar
 	$(MAKE) coccicheck
 
@@ -142,7 +142,7 @@ package-src:
 package-nopython:
 	$(MAKE) distclean
 	./autogen
-	./configure --enable-release --disable-python --disable-pcre-syntax --disable-menhirLib --disable-pycaml  $(extra_configure_flags)
+	./configure --disable-python --disable-pcre-syntax --disable-menhirLib --disable-pycaml  $(extra_configure_flags)
 	$(MAKE) bintar
 	$(MAKE) bytecodetar
 
@@ -152,7 +152,7 @@ package-nopython:
 package-python:
 	$(MAKE) distclean
 	./autogen
-	./configure --enable-release --enable-python --disable-pcre-syntax --disable-menhirLib --disable-pycaml $(extra_configure_flags)
+	./configure --enable-python --disable-pcre-syntax --disable-menhirLib --disable-pycaml $(extra_configure_flags)
 	$(MAKE) bintar-python
 	$(MAKE) bytecodetar-python
 
