--- a/commons/Makefile
+++ b/commons/Makefile
@@ -5,6 +5,7 @@
 # The main library
 ifneq ($(MAKECMDGOALS),distclean)
 include ../Makefile.config
+-include ../Makefile.local
 endif
 
 TARGET=commons
