--- a/engine/Makefile
+++ b/engine/Makefile
@@ -8,6 +8,7 @@
 #TARGET=matcher
 ifneq ($(MAKECMDGOALS),distclean)
 include ../Makefile.config
+-include ../Makefile.local
 endif
 
 TARGET=cocciengine
