--- a/python/Makefile
+++ b/python/Makefile
@@ -8,6 +8,7 @@
 #############################################################################
 ifneq ($(MAKECMDGOALS),distclean)
 include ../Makefile.config
+-include ../Makefile.local
 endif
 
 ##############################################################################
