--- a/docs/manual/Makefile
+++ b/docs/manual/Makefile
@@ -4,6 +4,7 @@
 
 ifneq ($(MAKECMDGOALS),distclean)
 include ../../Makefile.config
+-include ../../Makefile.local
 endif
 HEVEA = hevea
 HEVEA_XXDATE := $(shell ./find-xxdate)
